[package]
name = "vmess"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
pretty_env_logger = "*"
log = "*"
anyhow = "*"
hmac = "*"
md-5 = "*"
const-fnv1a-hash = "*"
aes = "*"
cfb-mode = "*"
generic-array = "*"
rand = "*"
uuid = { version = "1.7", features = ["serde"] }
