[package]
name = "vmessy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde"] }
pretty_env_logger = "0.5"
const-fnv1a-hash = "1.1"
cfb-mode = "0.8"
toml = "0.8"
log = "0.4"
anyhow = "1.0"
hmac = "0.12"
md-5 = "0.10"
aes = "0.8"
rand = "0.8"
crc32fast = "1.4"
sha2 = "0.10"
aes-gcm = "0.10"
